second commit, getting error 500, at line 139,  if (this.message.equals()) { message always throwing null